unpackaged/main/default/objects/ContactPointConsent/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Account Id</description>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Point Consents</relationshipLabel>
    <relationshipName>ContactPointConsents</relationshipName>
    <type>Lookup</type>
</CustomField>