unpackaged/main/default/objects/ContactPointConsent/fields/CustomContactPointType__c.field-meta.xml
<CustomField>
    <fullName>CustomContactPointType__c</fullName>
    <label>CustomContactPointType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomContactPointType</valueSetName>
    </valueSet>
</CustomField>