unpackaged/main/default/objects/ContactPointConsent/fields/DoubleOptInHash__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptInHash__c</fullName>
    <description>Sha256 Hash used for double Opt-In</description>
    <label>Double Opt-In Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>